tests/unit-fail-compilation/dup_params3.ref
dup_params3.c:1:1: error: Duplicate parameters in function definition.
  Constraint violation (CV-FD1). See C11 sec. 6.7:3
Translation failed (config dumped). Run kcc -d dup_params3.c to see commands run.
