tests/unit-fail-compilation/dup_params3.c
int f(x, x)
      int x, y;
{
      return x;
}

int main(void) {
      return f(0, 0);
}
